--- a/index.html
+++ b/index.html
@@ -242,15 +242,15 @@
             <div class="row g-0">
                 <div class="col-lg-6 py-5 wow fadeIn" data-wow-delay="0.1s">
                     <div class="py-5">
-                        <h1 class="display-6 mb-4">Tea is a drink of <span class="text-white">health</span> and <span class="text-white">beauty</span></h1>
-                        <h5 class="fw-normal lh-base fst-italic text-white mb-5">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit</h5>
+                        <h1 class="display-6 mb-4">Pickle and murabba are <span class="text-white">preserved foods</span> that offer various <span class="text-white">health</span> benefits</h1>
+                        <h5 class="fw-normal lh-base fst-italic text-white mb-5">Pickles are made by fermenting vegetables or fruits in salt, vinegar, or oil with spices. Murabba is a sweet preserve made by cooking fruits in sugar syrup and is often used in Ayurvedic medicine.</h5>
                         <div class="row g-4 mb-5">
                             <div class="col-sm-6">
                                 <div class="d-flex align-items-center">
                                     <div class="flex-shrink-0 btn-lg-square bg-white text-primary rounded-circle me-3">
                                         <i class="fa fa-check"></i>
                                     </div>
-                                    <span class="text-dark">Great tea assortment</span>
+                                    <span class="text-dark">Improves Digestion</span>
                                 </div>
                             </div>
                             <div class="col-sm-6">
@@ -258,7 +258,7 @@
                                     <div class="flex-shrink-0 btn-lg-square bg-white text-primary rounded-circle me-3">
                                         <i class="fa fa-check"></i>
                                     </div>
-                                    <span class="text-dark">Spices & additives</span>
+                                    <span class="text-dark">Boosts Immunity</span>
                                 </div>
                             </div>
                             <div class="col-sm-6">
@@ -266,7 +266,7 @@
                                     <div class="flex-shrink-0 btn-lg-square bg-white text-primary rounded-circle me-3">
                                         <i class="fa fa-check"></i>
                                     </div>
-                                    <span class="text-dark">Unique accessories</span>
+                                    <span class="text-dark">Aids Metabolism & Weight Loss</span>
                                 </div>
                             </div>
                             <div class="col-sm-6">
@@ -274,11 +274,11 @@
                                     <div class="flex-shrink-0 btn-lg-square bg-white text-primary rounded-circle me-3">
                                         <i class="fa fa-check"></i>
                                     </div>
-                                    <span class="text-dark">Good for health & beauty</span>
+                                    <span class="text-dark">Rich in Essential Minerals</span>
                                 </div>
                             </div>
                         </div>
-                        <a class="btn btn-light rounded-pill py-3 px-5" href="">Explore More</a>
+                        <!--<a class="btn btn-light rounded-pill py-3 px-5" href="">Explore More</a>-->
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
@@ -321,7 +321,7 @@
         <div class="container">
             <div class="section-title text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
                 <p class="fs-5 fw-medium fst-italic text-primary">Online Store</p>
-                <h1 class="display-6">Want to stay healthy? Choose tea taste</h1>
+                <h1 class="display-6">Want to stay healthy? <br>Add Pickle in daily meal</h1>
             </div>
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
@@ -449,7 +449,7 @@
             </div>
             <div class="row justify-content-center wow fadeInUp" data-wow-delay="0.1s">
                 <div class="col-lg-8">
-                    <p class="text-center mb-5">Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo</p>
+                    <!--<p class="text-center mb-5">Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo</p>-->
                     <div class="row g-5">
                         <div class="col-md-4 text-center wow fadeInUp" data-wow-delay="0.3s">
                             <div class="btn-square mx-auto mb-3">
@@ -487,20 +487,20 @@
                     <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>Flat 2272, Kaveri Tower, Mahagunpuram, Ghaziabad</p>
                     <p class="mb-2"><i class="fa fa-phone-alt text-primary me-3"></i>+91 8394045322</p>
                     <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>kumarikandamachar@gmail.com</p>
-                    <div class="d-flex pt-3">
+                   <!-- <div class="d-flex pt-3">
                         <a class="btn btn-square btn-primary rounded-circle me-2" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-primary rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-square btn-primary rounded-circle me-2" href=""><i class="fab fa-youtube"></i></a>
                         <a class="btn btn-square btn-primary rounded-circle me-2" href=""><i class="fab fa-linkedin-in"></i></a>
-                    </div>
+                    </div>-->
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-primary mb-4">Quick Links</h4>
                     <a class="btn btn-link" href="">About Us</a>
                     <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Services</a>
+                    <!--<a class="btn btn-link" href="">Our Services</a>
                     <a class="btn btn-link" href="">Terms & Condition</a>
-                    <a class="btn btn-link" href="">Support</a>
+                    <a class="btn btn-link" href="">Support</a>-->
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-primary mb-4">Business Hours</h4>
@@ -513,7 +513,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-primary mb-4">Newsletter</h4>
-                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+                    <!--<p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>-->
                     <div class="position-relative w-100">
                         <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
                         <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
