--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <div class="container-fluid product py-5 my-5">
         <div class="container py-5">
             <div class="section-title text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <p class="fs-5 fw-medium fst-italic text-primary">Our Products</p>
+                <p class="fs-5 fw-medium fst-italic text-primary">Our Products Categories</p>
                 <!--<h1 class="display-6">Tea has a complex positive effect on the body</h1>-->
             </div>
             <div class="owl-carousel product-carousel wow fadeInUp" data-wow-delay="0.5s">
