--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto">
                         <a href="index.html" class="nav-item nav-link active">Home</a>
-                        <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="product.html" class="nav-item nav-link">Products</a>
-                        <a href="store.html" class="nav-item nav-link">Store</a>
+                        <a href="index.html#about" class="nav-item nav-link">About</a>
+                        <a href="index.html#category" class="nav-item nav-link">Category</a>
+                        <a href="index.html#products" class="nav-item nav-link">Products</a>
                        <!-- <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu bg-light rounded-0 m-0">
@@ -64,7 +64,7 @@
                                 <a href="404.html" class="dropdown-item">404 Page</a>
                             </div>
                         </div>-->
-                        <a href="contact.html" class="nav-item nav-link">Contact</a>
+                        <a href="index.html#contact" class="nav-item nav-link">Contact</a>
                     </div>
                     <div class="border-start ps-4 d-none d-lg-block">
                         <button type="button" class="btn btn-sm p-0"><i class="fa fa-search"></i></button>
@@ -141,7 +141,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
+                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" id="about">
                     <div class="section-title">
                         <p class="fs-5 fw-medium fst-italic text-primary">About Us</p>
                         <h1 class="display-6">The success history of Kumari Kandam</h1>
@@ -173,7 +173,7 @@
 
 
     <!-- Products Start -->
-    <div class="container-fluid product py-5 my-5">
+    <div class="container-fluid product py-5 my-5" id="category">
         <div class="container py-5">
             <div class="section-title text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
                 <p class="fs-5 fw-medium fst-italic text-primary">Our Products Categories</p>
@@ -317,10 +317,10 @@
 
 
     <!-- Store Start -->
-    <div class="container-xxl py-5">
+    <div class="container-xxl py-5" id="products">
         <div class="container">
             <div class="section-title text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <p class="fs-5 fw-medium fst-italic text-primary">Online Store</p>
+                <p class="fs-5 fw-medium fst-italic text-primary">Our Products</p>
                 <h1 class="display-6">Want to stay healthy? <br>Add Pickle in daily meal</h1>
             </div>
             <div class="row g-4">
@@ -335,14 +335,14 @@
                                 <small class="fa fa-star text-primary"></small>
                                 <small class="fa fa-star text-primary"></small>
                             </div>
-                            <h4 class="mb-3">Nature close tea</h4>
-                            <p>Aliqu diam amet diam et eos. Clita erat ipsum lorem erat ipsum lorem sit sed</p>
-                            <h4 class="text-primary">$19.00</h4>
+                            <h4 class="mb-3">Heeng Mango Pickle</h4>
+                            <!--<p>Aliqu diam amet diam et eos. Clita erat ipsum lorem erat ipsum lorem sit sed</p>-->
+                            <h4 class="text-primary">Rs 125.00/250 gm</h4>
                         </div>
-                        <div class="store-overlay">
+                        <!--<div class="store-overlay">
                             <a href="" class="btn btn-primary rounded-pill py-2 px-4 m-2">More Detail <i class="fa fa-arrow-right ms-2"></i></a>
                             <a href="" class="btn btn-dark rounded-pill py-2 px-4 m-2">Add to Cart <i class="fa fa-cart-plus ms-2"></i></a>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
@@ -356,14 +356,11 @@
                                 <small class="fa fa-star text-primary"></small>
                                 <small class="fa fa-star text-primary"></small>
                             </div>
-                            <h4 class="mb-3">Green tea tulsi</h4>
-                            <p>Aliqu diam amet diam et eos. Clita erat ipsum lorem erat ipsum lorem sit sed</p>
-                            <h4 class="text-primary">$19.00</h4>
+                            <h4 class="mb-3">Mango Pickle Regular</h4>
+                            <!--<p>Aliqu diam amet diam et eos. Clita erat ipsum lorem erat ipsum lorem sit sed</p>-->
+                            <h4 class="text-primary">Rs 125.00/250 gm</h4>
                         </div>
-                        <div class="store-overlay">
-                            <a href="" class="btn btn-primary rounded-pill py-2 px-4 m-2">More Detail <i class="fa fa-arrow-right ms-2"></i></a>
-                            <a href="" class="btn btn-dark rounded-pill py-2 px-4 m-2">Add to Cart <i class="fa fa-cart-plus ms-2"></i></a>
-                        </div>
+
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
@@ -377,18 +374,14 @@
                                 <small class="fa fa-star text-primary"></small>
                                 <small class="fa fa-star text-primary"></small>
                             </div>
-                            <h4 class="mb-3">Instant tea premix</h4>
-                            <p>Aliqu diam amet diam et eos. Clita erat ipsum lorem erat ipsum lorem sit sed</p>
-                            <h4 class="text-primary">$19.00</h4>
-                        </div>
-                        <div class="store-overlay">
-                            <a href="" class="btn btn-primary rounded-pill py-2 px-4 m-2">More Detail <i class="fa fa-arrow-right ms-2"></i></a>
-                            <a href="" class="btn btn-dark rounded-pill py-2 px-4 m-2">Add to Cart <i class="fa fa-cart-plus ms-2"></i></a>
+                            <h4 class="mb-3">Mix Veg Pickle (Spicy)</h4>
+                            <!--<p>Aliqu diam amet diam et eos. Clita erat ipsum lorem erat ipsum lorem sit sed</p>-->
+                            <h4 class="text-primary">Rs 115.00/250 gm</h4>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 text-center wow fadeInUp" data-wow-delay="0.1s">
-                    <a href="" class="btn btn-primary rounded-pill py-3 px-5">View More Products</a>
+                    <a href="product.html" class="btn btn-primary rounded-pill py-3 px-5">View More Products</a>
                 </div>
             </div>
         </div>
@@ -401,7 +394,7 @@
         <div class="container py-5">
             <div class="section-title text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
                 <p class="fs-5 fw-medium fst-italic text-white">Testimonial</p>
-                <h1 class="display-6">What our clients say about our tea</h1>
+                <h1 class="display-6">What our clients say about our products</h1>
             </div>
             <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.5s">
                 <div class="testimonial-item p-4 p-lg-5">
@@ -441,7 +434,7 @@
 
 
     <!-- Contact Start -->
-    <div class="container-xxl contact py-5">
+    <div class="container-xxl contact py-5" id="contact">
         <div class="container">
             <div class="section-title text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
                 <p class="fs-5 fw-medium fst-italic text-primary">Contact Us</p>
