--- a/index.html
+++ b/index.html
@@ -398,32 +398,30 @@
             </div>
             <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.5s">
                 <div class="testimonial-item p-4 p-lg-5">
-                    <p class="mb-4">Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo</p>
+                    <p class="mb-4">Absolutely love the flavors and quality of your pickles! The perfect blend of spices and crunch makes every bite irresistible. Keep up the amazing work—your pickles are truly a delight!</p>
                     <div class="d-flex align-items-center justify-content-center">
-                        <img class="img-fluid flex-shrink-0" src="img/testimonial-1.jpg" alt="">
+                        <img class="img-fluid flex-shrink-0" src="img/testimonial.jpg" alt="">
                         <div class="text-start ms-3">
-                            <h5>Client Name</h5>
-                            <span class="text-primary">Profession</span>
+                            <h5>Birendra Singh Dobliyal</h5>
+                            <!--<span class="text-primary">Profession</span>-->
                         </div>
                     </div>
                 </div>
                 <div class="testimonial-item p-4 p-lg-5">
-                    <p class="mb-4">Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo</p>
+                    <p class="mb-4">Best pickles in the world, And one of the best thing is their quality</p>
                     <div class="d-flex align-items-center justify-content-center">
-                        <img class="img-fluid flex-shrink-0" src="img/testimonial-2.jpg" alt="">
+                        <img class="img-fluid flex-shrink-0" src="img/testimonial.jpg" alt="">
                         <div class="text-start ms-3">
-                            <h5>Client Name</h5>
-                            <span class="text-primary">Profession</span>
+                            <h5>Chaitanya Gupta</h5>
                         </div>
                     </div>
                 </div>
                 <div class="testimonial-item p-4 p-lg-5">
-                    <p class="mb-4">Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo</p>
+                    <p class="mb-4">Nice pickles</p>
                     <div class="d-flex align-items-center justify-content-center">
-                        <img class="img-fluid flex-shrink-0" src="img/testimonial-3.jpg" alt="">
+                        <img class="img-fluid flex-shrink-0" src="img/testimonial.jpg" alt="">
                         <div class="text-start ms-3">
-                            <h5>Client Name</h5>
-                            <span class="text-primary">Profession</span>
+                            <h5>Arvind Tiwari</h5>
                         </div>
                     </div>
                 </div>
@@ -448,7 +446,7 @@
                             <div class="btn-square mx-auto mb-3">
                                 <i class="fa fa-envelope fa-2x text-white"></i>
                             </div>
-                            <p class="mb-2">kumarikandamchar@gmail.com</p>
+                            <p class="mb-2">kumarikandamachar@gmail.com</p>
                         </div>
                         <div class="col-md-4 text-center wow fadeInUp" data-wow-delay="0.4s">
                             <div class="btn-square mx-auto mb-3">
